Fixes visibility of code blocks in links

--- a/baseresources/sedrila.css
+++ b/baseresources/sedrila.css
@@ -21,6 +21,11 @@ a:link {
     filter: brightness(50%);
 }
 
+a>code {
+    background-color: rgba(255, 255, 255, 0.5);
+    color: var(--main-color);
+}
+
 a:visited {
     color: var(--main-color);
     filter: brightness(40%);
